# fediverse-client

./: .gitmodules
Misskey.py/: main.py  requirements.txt
corekey/: package.json
corekey/src/: index.ts
go-mastodon/: go.mod  main.go
masto.js/: index.js  package.json
megalodon/: package.json  tsconfig.json
megalodon/src/: index.ts
misskey-rs/: Cargo.toml
misskey-rs/src/: main.rs
peertube-client/: package.json  tsconfig.json
peertube-client/src/: index.ts
pleroma-api/: index.html  package.json  webpack.config.js
pleroma-api/src/: index.js
pleroma_hunter/: .gitignore  README.md  mix.exs
pleroma_hunter/lib/: pleroma_hunter.ex
pleroma_hunter/test/: pleroma_hunter_test.exs
