[package]
name = "misskey-rs"
version = "0.1.0"
authors = ["AkiraFukushima <h3.poteto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
misskey = "0.2"
tokio = { version = "0.3", features = ["full"] }
anyhow = "1.0"
futures = "0.3.5"